--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "version": "1.0.0",
   "description": "React bot for webpage",
   "main": "index.js",
-  "engines":{
-    "node":"20.17.0",
-    "npm":"10.8.2"
+  "engines": {
+    "node": "20.17.0",
+    "npm": "10.8.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "backend": "nodemon index.js"
   },
   "author": "Noursine Baldi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "@google-cloud/dialogflow": "^6.12.0",
+    "body-parser": "^1.20.3",
+    "dialogflow": "^4.0.3",
+    "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
