--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@google-cloud/dialogflow": "^6.12.0",
     "body-parser": "^1.20.3",
     "dialogflow": "^4.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
