--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "React bot for webpage",
   "main": "index.js",
   "engines": {
-    "node": "20.17.0",
-    "npm": "10.8.2"
-  },
+  "node": "18.x",
+  "npm": "10.8.2"
+}
+,
   "scripts": {
     "start": "node index.js",
     "backend": "nodemon index.js"
