--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "React bot for webpage",
   "main": "index.js",
   "engines": {
-  "node": "18.x",
-  "npm": "10.8.2"
-}
-,
+    "node": "18.x",
+    "npm": "10.8.2"
+  },
   "scripts": {
     "start": "node index.js",
     "backend": "nodemon index.js"
@@ -17,6 +16,7 @@
   "dependencies": {
     "@google-cloud/dialogflow": "^6.12.0",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dialogflow": "^4.0.3",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
