--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React bot for webpage",
   "main": "index.js",
   "engines": {
-    "node": "18.x",
+    "node": "v20.17.0",
     "npm": "10.8.2"
   },
   "scripts": {
@@ -15,11 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/dialogflow": "^6.12.0",
+    "@grpc/grpc-js": "^1.12.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dialogflow": "^4.0.3",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "google-gax": "^4.4.1",
+    "googleapis": "^144.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
